[tool.poetry]
name = "dataroots-profile"
version = "0.1.0"
description = "Helper to generate a dynamic dataroots Github profile"
authors = ["Murilo Cunha <murilo@dataroots.io>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Devtools not in environment, but used in `pre-commit`
[tool.isort]
profile = "black"
